[tool.poetry]
name = "async-practice"
version = "0.1.0"
description = ""
authors = ["Bohdan Solianyk <bohdan_solianyk@epam.com>"]
readme = "README.md"
packages = [{include = "async_practice"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
